@@ -2,6 +2,7 @@
     - Shuffle key tokens and don't reuse them. Should make for more random
       replies.
     - Check for definedness of $self->brain in Hailo::Storage::*
+    - Use autodie to catch open/close errors
 
 0.04 Fri Jan 29 17:48:49 GMT 2010
     - You know that bug we talked about being fixed in 0.03? It was
